--- a/src/components/signin/signinform.styles.scss
+++ b/src/components/signin/signinform.styles.scss
@@ -1,4 +1,4 @@
-.sign-up-container {
+.sign-in-container {
     display: flex;
     flex-direction: column;
     width: 380px;
@@ -6,10 +6,16 @@
     h2 {
         margin: 10px 0;
     }
+
+    .sign-in-buttons-container {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 @media only screen and (max-width: 900px) {
-    .sign-in-container {
+    .sign-up-container {
         flex-basis: 100%;
+        margin-top: 4em;
     }
 }
