Added Cart Dropdown Functionality. Added CartContext.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,16 @@
 body {
   margin: 0;
+  padding: 20px 40px;
   font-family: 'Roboto Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media only screen and (max-width: 900px) {
+  body {
+    padding: 10px;
+  }
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
