--- a/src/components/categories/categories.styles.scss
+++ b/src/components/categories/categories.styles.scss
@@ -5,6 +5,13 @@
     justify-content: space-between;
 }
 
+@media only screen and (max-width: 900px) {
+    .categories-container {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
+
 .category-container {
     min-width: 30%;
     height: 240px;
