--- a/src/components/signup/signupform.styles.scss
+++ b/src/components/signup/signupform.styles.scss
@@ -11,5 +11,6 @@
 @media only screen and (max-width: 900px) {
     .sign-in-container {
         flex-basis: 100%;
+        padding: 0 16px;
     }
 }
