Added Products to Database. Updated Firebase Utils to use Collections and Categories from Database. Updated Shop and ProductsContext -> CategoriesContext.

--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -28,4 +28,10 @@
       margin-left: auto;
       font-size: 36px;
     }
-  }
+}
+
+@media only screen and (max-width: 768px) {
+    .checkout-container {
+        width: 90%;
+    }
+}
