--- a/src/routes/shop-category/shopcategory.styles.scss
+++ b/src/routes/shop-category/shopcategory.styles.scss
@@ -1,4 +1,4 @@
-.products-container {
+.shop-category-container {
     display: grid;
     grid-template-columns: 1fr;
     column-gap: 10px;
@@ -6,19 +6,30 @@
 }
 
 @media only screen and (min-width: 576px) {
-    .products-container {
+    .shop-category-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media only screen and (min-width: 992px) {
-    .products-container {
+    .shop-category-container {
         grid-template-columns: repeat(3, 1fr)
     }
 }
 
 @media only screen and (min-width: 1200px) {
-    .products-container {
+    .shop-category-container {
         grid-template-columns: repeat(4, 1fr);
     }
+}
+
+.shop-category-title {
+    font-size: 2.4em;
+    text-align: center;
+    margin-bottom: 1em;
+    font-weight: 300;
+}
+
+.shop-category-back-button-container {
+    margin-top: 2em;
 }
